// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests form GifExpertApp should be render GifExpertApp 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Tests form GifExpertApp should be render GifExpertApp with two components GifGrid 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Star Wars"
      key="Star Wars"
    />
    <GifGrid
      category="Spiderman"
      key="Spiderman"
    />
  </ol>
</Fragment>
`;
